--- a/.adapter.yml
+++ b/.adapter.yml
@@ -9,6 +9,7 @@ data_sources:
   - name: Alpha Vantage
     url: https://alphavantage.co
 parameters:
+  - apikey
   - function
   - interval
   - symbol
